--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,13 +22,12 @@ environment:
 
 dependencies:
   sizer: ^2.0.13
-
+  google_fonts: ^2.1.0
 
 
 
   flutter:
     sdk: flutter
-
 
 
 
@@ -56,7 +55,13 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-     - res/
+    - res/
+  fonts:
+    - family: Monserrat
+      fonts:
+        - asset: res/fonts/Montserrat-Medium.ttf
+        - asset: res/fonts/Montserrat-Bold.ttf
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
